pipe.im/derelict/purple/status.d

    alias da_purple_presence_compare = gint function(const(PurplePresence)* presence1, const(PurplePresence)* presence2);																																	                                	
    alias da_purple_status_get_handle = void* function();																																																	                                	
    alias da_purple_status_init = void function();																																																			                                	
    alias da_purple_status_uninit = void function();

}

__gshared
{
	da_purple_primitive_get_id_from_type purple_primitive_get_id_from_type;
	da_purple_primitive_get_name_from_type purple_primitive_get_name_from_type;
	da_purple_primitive_get_type_from_id purple_primitive_get_type_from_id;
	da_purple_status_type_new_full purple_status_type_new_full;
	da_purple_status_type_new purple_status_type_new;
	da_purple_status_type_new_with_attrs purple_status_type_new_with_attrs;
	da_purple_status_type_destroy purple_status_type_destroy;
	da_purple_status_type_set_primary_attr purple_status_type_set_primary_attr;
	da_purple_status_type_add_attr purple_status_type_add_attr;
	da_purple_status_type_add_attrs purple_status_type_add_attrs;
	da_purple_status_type_add_attrs_vargs purple_status_type_add_attrs_vargs;
	da_purple_status_type_get_primitive purple_status_type_get_primitive;
	da_purple_status_type_get_id purple_status_type_get_id;
	da_purple_status_type_get_name purple_status_type_get_name;
	da_purple_status_type_is_saveable purple_status_type_is_saveable;
	da_purple_status_type_is_user_settable purple_status_type_is_user_settable;
	da_purple_status_type_is_independent purple_status_type_is_independent;
	da_purple_status_type_is_exclusive purple_status_type_is_exclusive;
	da_purple_status_type_is_available purple_status_type_is_available;
	da_purple_status_type_get_primary_attr purple_status_type_get_primary_attr;
	da_purple_status_type_get_attr purple_status_type_get_attr;
	da_purple_status_type_get_attrs purple_status_type_get_attrs;
	da_purple_status_type_find_with_id purple_status_type_find_with_id;
	da_purple_status_attr_new purple_status_attr_new;
	da_purple_status_attr_destroy purple_status_attr_destroy;
	da_purple_status_attr_get_id purple_status_attr_get_id;
	da_purple_status_attr_get_name purple_status_attr_get_name;
	da_purple_status_attr_get_value purple_status_attr_get_value;
	da_purple_status_new purple_status_new;
	da_purple_status_destroy purple_status_destroy;
	da_purple_status_set_active purple_status_set_active;
	da_purple_status_set_active_with_attrs purple_status_set_active_with_attrs;
	da_purple_status_set_active_with_attrs_list purple_status_set_active_with_attrs_list;
	da_purple_status_set_attr_boolean purple_status_set_attr_boolean;
	da_purple_status_set_attr_int purple_status_set_attr_int;
	da_purple_status_set_attr_string purple_status_set_attr_string;
	da_purple_status_get_type purple_status_get_type;
	da_purple_status_get_presence purple_status_get_presence;
	da_purple_status_get_id purple_status_get_id;
	da_purple_status_get_name purple_status_get_name;
	da_purple_status_is_independent purple_status_is_independent;
	da_purple_status_is_exclusive purple_status_is_exclusive;
	da_purple_status_is_available purple_status_is_available;
	da_purple_status_is_active purple_status_is_active;
	da_purple_status_is_online purple_status_is_online;
	da_purple_status_get_attr_value purple_status_get_attr_value;
	da_purple_status_get_attr_boolean purple_status_get_attr_boolean;
	da_purple_status_get_attr_int purple_status_get_attr_int;
	da_purple_status_get_attr_string purple_status_get_attr_string;
	da_purple_status_compare purple_status_compare;
	da_purple_presence_new purple_presence_new;
	da_purple_presence_new_for_account purple_presence_new_for_account;
	da_purple_presence_new_for_conv purple_presence_new_for_conv;
	da_purple_presence_new_for_buddy purple_presence_new_for_buddy;
	da_purple_presence_destroy purple_presence_destroy;
	da_purple_presence_add_status purple_presence_add_status;
	da_purple_presence_add_list purple_presence_add_list;
	da_purple_presence_set_status_active purple_presence_set_status_active;
	da_purple_presence_switch_status purple_presence_switch_status;
	da_purple_presence_set_idle purple_presence_set_idle;
	da_purple_presence_set_login_time purple_presence_set_login_time;
	da_purple_presence_get_context purple_presence_get_context;
	da_purple_presence_get_account purple_presence_get_account;
	da_purple_presence_get_conversation purple_presence_get_conversation;
	da_purple_presence_get_chat_user purple_presence_get_chat_user;
	da_purple_presence_get_buddy purple_presence_get_buddy;
	da_purple_presence_get_statuses purple_presence_get_statuses;
	da_purple_presence_get_status purple_presence_get_status;
	da_purple_presence_get_active_status purple_presence_get_active_status;
	da_purple_presence_is_available purple_presence_is_available;
	da_purple_presence_is_online purple_presence_is_online;
	da_purple_presence_is_status_active purple_presence_is_status_active;
	da_purple_presence_is_status_primitive_active purple_presence_is_status_primitive_active;
	da_purple_presence_is_idle purple_presence_is_idle;
	da_purple_presence_get_idle_time purple_presence_get_idle_time;
	da_purple_presence_get_login_time purple_presence_get_login_time;
	da_purple_presence_compare purple_presence_compare;
	da_purple_status_get_handle purple_status_get_handle;
	da_purple_status_init purple_status_init;
	da_purple_status_uninit purple_status_uninit;
}